test/expressions/noinit/recordHasClassField.good
recordHasClassField.chpl:9: error: noinit is only supported for arrays
